app/Resources/assets/scss/control_panel.scss
@import "custom";
@import "../../../../node_modules/@coreui/coreui/scss/coreui";
@import "../../../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
@import "../../../../node_modules/@fortawesome/fontawesome-free/scss/brands";
@import "../../../../node_modules/@fortawesome/fontawesome-free/scss/regular";
@import "../../../../node_modules/@fortawesome/fontawesome-free/scss/solid";
@import "../../../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims";
@import "partials/fonts";
@import "partials/typography";
@import "footer";
@import "modules/colors";

$sidebar-width: 225px;
body {
  font-family: 'Lato', sans-serif;
  background: $vektor-white;
  font-size: 14px;
}

.card-header {
  font-size: 16px;
}

.app-header {
  .dropdown-item {
    padding: 10px 20px;
    border-bottom: 1px solid #c8ced3;
  }
}

.dropdown-item, .btn {
  font-size: 14px;
}

html:not([dir=rtl]) {
  .sidebar-show {
    &.sidebar-fixed {
      .main {
        margin-left: $sidebar-width;
      }
      .breadcrumb {
        .navbar-toggler {
          display: none;
        }
      }
    }
    .app-body {
      .sidebar {
        margin-left: 0;
        height: 100vh;
      }
    }
  }
  .app-body {
    @media (max-width: 991.98px) {
      margin-top: 0;
    }
    .sidebar {
      margin-left: -$sidebar-width;
      width: $sidebar-width;
      @media (min-width: 992px) {
        margin-left: 0;
      }
      .sidebar-nav {
        width: $sidebar-width;
        ul.nav {
          width: $sidebar-width;
          .nav-link {
            &:hover {
              background: $info;
              &.active .nav-icon {
                color: $white;
              }
            }
            &.active {
              .nav-icon {
                color: $info;
              }
            }
          }
        }
      }
    }
  }

  .sidebar-lg-show.sidebar-fixed .main {
    @media (min-width: 576px) and (min-width: 992px) {
      margin-left: $sidebar-width;
    }
  }

  .flash-message {
    margin-top: -1rem;
  }
}

.breadcrumb {
  display: flex;
  flex-wrap: wrap;
  padding: .75rem 1rem;
  margin-bottom: 1rem;
  list-style: none;
  background-color: #e9ecef;
  border-radius: .25rem;
  border-bottom: 1px solid #c8ced3;
  position: relative;
}

.breadcrumb-item {
  display: flex;
  align-items: center;
}

.f-dropdown {
  outline: none;
}

.reveal-modal ul {
  margin-left: 0;
}

// Hide the content and the footer of the options box
.closed {
  .content, .footer {
    display: none;
  }
}

// Header
// - - - - - - - - - - - - - - - - - - - - - - - - -

.top-header {
  margin-bottom: 16px;
}

.arrow {
  color: $vektor-blue;
}

// AdmissionAdmin
// - - - - - - - - - - - - - - - - - - - - - - - - -

.interview-assign {
  border-bottom: solid #dddddd 1px;
}

.active-application {
  border-top: solid #dddddd 1px;
  border-bottom: solid #dddddd 1px;
}

// Interview
// - - - - - - - - - - - - - - - - - - - - - - - - -

.question-label, .question-title {
  font-weight: bold;
  font-size: 1rem;
}

.question-help {
  font-size: 0.9rem;
}

ul.alternatives {
  margin-bottom: 1rem;
  input[type="checkbox"], input[type="radio"] {
    margin: 0 0;
  }
}

.radio-grid {
  margin-left: 0;
  list-style-type: none;
  & > div > li {
    margin-right: 1rem;
    display: inline-block;
  }
}

// Utils
// - - - - - - - - - - - - - - - - - - - - - - - - -

.float-right {
  float: right;
}

.clear {
  clear: both;
}

.slide-group {
  margin-top: 30px;
  display: none;
}

// Sponsor
.vertical-align-image-helper {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.sponsor-img {
  max-height: 150px;
  vertical-align: middle;
  .small {

  }
}

//Team specific
#oldTeamMembershipsButton {
  margin: 30px 0;
}

#oldTeamMemberships {
  margin-top: 30px;
  display: none;
}

// Sponsor
.vertical-align-image-helper {
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.sponsor-img-small {
  vertical-align: middle;

  @media screen and (max-width: 900px) {
    max-width: 100%;
    max-height: 50%;
  }
  @media screen and (min-width: 900px) {
    max-width: 200px;
    max-height: 25%;
  }
}

.sponsor-img-medium {
  vertical-align: middle;
  max-height: 50%;
  @media screen and (max-width: 1000px) {
    max-width: 100%;
  }
  @media screen and (min-width: 1000px) {
    max-width: 300px;
  }
;
}

.sponsor-img-large {
  vertical-align: middle;
  max-height: 90%;
  @media screen and (max-width: 1000px) {
    max-width: 100%;
  }
  @media screen and (min-width: 1000px) {
    max-width: 400px;
  }
}

.sponsor-column {
  height: 150px;
}

//Team specific
#oldTeamMembershipsButton {
  margin: 30px 0;
}

#oldTeamMemberships {
  margin-top: 30px;
  display: none;
}

//Control Panel
.control-panel {
  hr {
    padding: 10px;
  }

  .control-panel-item {
    text-align: center;
    margin: 10px 0;
  }

  h3 {
    padding: 20px;
  }

  .control-panel-item i {
    color: #008CBA;
  }

  .control-panel-item i:hover {
    color: #007095;
  }
}

.admin-top-line {
  background-color: $admin-grey;
}

//Admin Base

.control-panel-header {
  margin-top: 75px;
  text-align: center
}

//Navigation Menu
.control-menu {
  padding-top: 17px;
  padding-bottom: 1px;
  background-color: #333333;

  .f-dropdown.mini {
    max-width: 100px;
  }

  .f-dropdown.very-small {
    max-width: 150px;
  }

  > ul {
    display: flex;
    flex-direction: row;
    margin-left: 0;
    list-style-type: none;
    > li {
      text-align: center;
      flex-grow: 1;
      display: inline-block;
      > ul > li {
        text-align: left;
      }
      > a, .arrow {
        font-weight: bold;
        color: #dfdfdf;
        font-family: "Lato", sans-serif;

        &:hover {
          color: #ffffff;
        }
      }
    }

  }
}
/* ... */

